force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/ucinn_ascendv2__Manual_Merge_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings for merge of interims.</description>
    <label>Merge Setting</label>
    <pluralLabel>Merge Settings</pluralLabel>
</CustomObject>