force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Auto_Merge_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Auto_Merge_Threshold__c</fullName>
    <description>Matching threshold at which interims are automatically matched to a contact and merged, when only one duplicate is found.</description>
    <inlineHelpText>Matching threshold at which interims are automatically matched to a contact and merged, when only one duplicate is found.</inlineHelpText>
    <label>Auto Merge Threshold</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>