force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Contact_Record_Type_Namespace__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Record_Type_Namespace__c</fullName>
    <description>Namespace of the record type that will be applied to the contact on creation.</description>
    <inlineHelpText>Namespace of the record type that will be applied to the contact on creation.</inlineHelpText>
    <label>Record Type Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>