force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Default_Setting__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Default_Setting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this setting will be used for record types that do not have a corresponding merge interim setting. There should only be one default setting specified.</description>
    <inlineHelpText>If checked, this setting will be used for record types that do not have a corresponding merge interim setting. There should only be one default setting specified.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>