force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Disable_Salesforce_Duplicate_Checks__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disable_Salesforce_Duplicate_Checks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables Salesforce duplicate checks when inserting SObjects.</description>
    <inlineHelpText>Disables Salesforce duplicate checks when inserting SObjects.</inlineHelpText>
    <label>Disable Salesforce Duplicate Checks</label>
    <type>Checkbox</type>
</CustomField>