force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Enable_RTv2_Processing__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_RTv2_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable automatic RTv2 processing after completing an interim</inlineHelpText>
    <label>Enable RTv2 Processing</label>
    <type>Checkbox</type>
</CustomField>