force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Interim_Fields_To_Display__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Interim_Fields_To_Display__c</fullName>
    <description>For displaying fields that will show up on every tab.</description>
    <inlineHelpText>For displaying fields that will show up on every tab. Example: field1__c, field2__c</inlineHelpText>
    <label>Interim Fields To Display</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>