force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Interim_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Interim_Record_Type_Developer_Name__c</fullName>
    <label>Interim Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>