force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Interim_Record_Type_Namespace__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Interim_Record_Type_Namespace__c</fullName>
    <label>Interim Record Type Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>