force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__New_Base_Package_Extension__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__New_Base_Package_Extension__c</fullName>
    <description>For extending the interim new batch.</description>
    <inlineHelpText>For extending the interim new batch.</inlineHelpText>
    <label>New Base Package Extension</label>
    <referenceTo>ucinn_ascendv2__Package_Extension__mdt</referenceTo>
    <relationshipLabel>Merge Settings (New Base Package Extension)</relationshipLabel>
    <relationshipName>Merge_Settings_New_Batch_Package_Ext</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>