force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Omit_Interims_Without_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Omit_Interims_Without_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interims without existing matches in the system will be omitted from processing.</description>
    <inlineHelpText>Interims without existing matches in the system will be omitted from processing.</inlineHelpText>
    <label>Omit Interims Without Duplicates</label>
    <type>Checkbox</type>
</CustomField>