force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Package_Extension__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Package_Extension__c</fullName>
    <description>For extending the merge base class.</description>
    <inlineHelpText>For extending the merge base class.</inlineHelpText>
    <label>Merge Base Package Extension</label>
    <referenceTo>ucinn_ascendv2__Package_Extension__mdt</referenceTo>
    <relationshipLabel>Merge Settings (Package Extension)</relationshipLabel>
    <relationshipName>Manual_Merge_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>