force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Pending_Base_Package_Extension__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pending_Base_Package_Extension__c</fullName>
    <description>For extending the interim pending batch.</description>
    <inlineHelpText>For extending the interim pending batch.</inlineHelpText>
    <label>Pending Base Package Extension</label>
    <referenceTo>ucinn_ascendv2__Package_Extension__mdt</referenceTo>
    <relationshipLabel>Merge Settings (Pending Base Package Extension)</relationshipLabel>
    <relationshipName>Merge_Settings_Pending_Base_Package_Ext</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>