force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Possible_Dup_Found_Field_Type_Dict__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Possible_Dup_Found_Field_Type_Dict__c</fullName>
    <label>Possible Dup Found Field Type Dict</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>