force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Possible_Dup_Found_Fields_to_Display__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Possible_Dup_Found_Fields_to_Display__c</fullName>
    <description>Fields to display on the possible dup found table. Format is as follows [&quot;Source.ucinn_ascendv2__First_Name__c&quot;, &quot;Target.FirstName&quot;].</description>
    <inlineHelpText>Fields to display on the possible dup found table. Format is as follows [&quot;Source.ucinn_ascendv2__First_Name__c&quot;, &quot;Target.FirstName&quot;].</inlineHelpText>
    <label>Possible Dup Found Fields to Display</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>