force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Target_Object_API_Name__c</fullName>
    <description>The API name of the target object that this merge setting record will be applied to.</description>
    <inlineHelpText>The API name of the target object. (e.g. &quot;Contact&quot; or &quot;Account&quot;)</inlineHelpText>
    <label>Target Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>