force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Use_Auto_Merge_V2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Use_Auto_Merge_V2__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows use of Interim to Contact auto merge v2 rather than v1.</description>
    <inlineHelpText>Allows use of Interim to Contact auto merge v2 rather than v1.</inlineHelpText>
    <label>Use Auto Merge V2</label>
    <type>Checkbox</type>
</CustomField>