force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/fields/ucinn_ascendv2__Use_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Use_Person_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this to true if you want Interims to create Person Accounts in place of Contacts.</description>
    <inlineHelpText>Set this to true if you want Interims to create Person Accounts in place of Contacts.</inlineHelpText>
    <label>Use Person Account</label>
    <type>Checkbox</type>
</CustomField>