force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Setting__mdt/listViews/ucinn_ascendv2__Merge_Settings_Main_Fields.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__Merge_Settings_Main_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ucinn_ascendv2__Default_Setting__c</columns>
    <columns>ucinn_ascendv2__Interim_Record_Type_Developer_Name__c</columns>
    <columns>ucinn_ascendv2__Interim_Record_Type_Namespace__c</columns>
    <columns>ucinn_ascendv2__Use_Auto_Merge_V2__c</columns>
    <columns>ucinn_ascendv2__Package_Extension__c</columns>
    <columns>ucinn_ascendv2__Disable_Salesforce_Duplicate_Checks__c</columns>
    <columns>ucinn_ascendv2__Auto_Merge_Threshold__c</columns>
    <filterScope>Everything</filterScope>
    <label>Merge Settings Main Fields</label>
    <language>en_US</language>
</ListView>